--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-libmeegotouch (0.20.30~1) unstable; urgency=low
+libmeegotouch (0.20.30-2) unstable; urgency=low
+
+  * Fixes: Change deb log version 
+
+ -- Sergiy Dubovik <sergiy.dubovik@nokia.com>  Wed, 28 Jul 2010 14:55:42 +0300
+
+libmeegotouch (0.20.30-1) unstable; urgency=low
 
   * Fixes: NB#181556 - The spinner in theme applet does not disappear when the theme change finished
   * Fixes: MB#4014 - prefix of pc files are statically set to /usr
