--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02032 0.20.32
+
+\subsection New
+- Added "Getting Started" documentation
+
 \section v02030 0.20.30
 
 - Fixed NB#175847: MPannableArea does not work inside an MApplicationPage
