Fixes: NB#182051 - closing the various setting ui from the SUW is closing the SUW itself
RevBy: Michał
Details: Block signals from MEscapeButtonPanel when updating auto escape
mode when a page is popped from the page stack.
It was causing the close button geometry to be temporarily overwritten,
allowing user to actually close the application by quickly tapping the
back button twice.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -3,6 +3,7 @@
 \section v02032 0.20.32
 
 - Fixed NB#178931 - System modal dialog cannot be invoked twice
+- Fixed: NB#182051 - Closing the various setting ui from the SUW is closing the SUW itself
 
 \subsection New
 - Added "Getting Started" documentation
