New: MSceneWindow::appear(scene, policy);
RevBy: Dominik Kapusta
Details: Added to accompany the existing MSceneWindow::appear(window, policy);

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -5,6 +5,7 @@
 \subsection New
 
 - Updated \subpage rotation document.
+- MSceneWindow::appear(QGraphicsScene *scene, MSceneWindow::DeletionPolicy policy);
 
 \section v02032 0.20.32
 
