Fixes: MB#4876 - Broken link on http://apidocs.meego.com/mtf/
RevBy: TrustMe

--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -27,7 +27,7 @@
     </td>
     <td>
       <ul>
-       <li><strong><a href="http://http://meego.gitorious.org/meegotouch/libmeegotouch">Code repository</a></strong></li>
+       <li><strong><a href="http://meego.gitorious.org/meegotouch/libmeegotouch">Code repository</a></strong></li>
        <li><a href="http://meego.gitorious.org/meegotouch/pages/Home">MeeGo Touch Wiki</a></li>
        <li><a href="bugreporting.html">How to Report a Bug</a></li>
        <li><a href="credits.html">Credits</a></li>
