Changes: Added new gestures & multitouch overview document
RevBy: TrustMe

--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -51,6 +51,7 @@
     </td>
     <td>
       <ul>
+       <li><a href="gestures.html">Gestures</a></li>
        <li><a href="layouts.html">Layouts</a></li>
        <li><a href="rotation.html">Rotation</a></li>
        <li><a href="faststart.html">Fast application startup</a></li>
