--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,11 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02034 0.20.34
+
+\subsection New
+
+- Updated \subpage rotation document.
+
 \section v02032 0.20.32
 
 \subsection New
