--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,7 @@ libmeegotouch (0.20.29-1) unstable; urgency=low
   * Fixes: NB#180566 - TextEdit should reply the file name of registered input method custom toolbar for inputMethodQuery.
   * Fixes: NB#180350 - MLabel: Text is initially wrapped even if wordWrap is set to false
   * Fixes: NB#180331 - CSS constants do not work for pixmap types
+  * Fixes: NB#169961 - VKB does rotate but plain Qt application stay in landscape mode
 
  -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Fri, 23 Jul 2010 10:26:55 +0300
 
@@ -130,6 +131,7 @@ libmeegotouch (0.20.23-1) unstable; urgency=low
   * Fixes: NB#175800 - MButton layout when horizontal-text-align is left and icon-align is right ignores label position
   * Fixes: NB#176455 - MClassFactory trashes debug output
   * Fixes: NB#176134 - No unique object names for MActions in application menu
+  * Fixes: NB#171599 - plainQt - sw keyboard hides QTextedit of QInputDialog
 
  -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 28 Jun 2010 14:22:16 +0300
 
