--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -31,6 +31,7 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
  Jani Lehmuskoski 
  Jani Mikkonen 
  Janne Heikkilä
+ Jarosław Jaryszew
  Jarno Santeri Luoma-Nirva
  Johan Paul
  John Tapsell
